--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "book"
   ],
   "author": "Steven Lignereux",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "sass": "^1.57.1"
+  }
 }
